# printer-server

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  SumatraPDF-settings.txt  WINDOWS_SERVICE.md
.github/workflows/: release.yml
src/: main.rs  models.rs  printer_service.rs  windows_service_runner.rs
