[package]
name = "printer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http1"] }
hyper = { version = "1.1.0", features = ["server", "http1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.10.0"

[target."cfg(windows)".dependencies]
windows-service = "0.8.0"
